# Loomix

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
shaders/: cloth.frag  cloth.vert  simple.frag  simple.vert
src/: Application.cpp  Application.h  Camera.cpp  Camera.h  Cloth.cpp  Cloth.h  EntryPoint.h  Layer.h  LoomixApp.cpp  RK4Integrator.cpp  Timer.h  TriangleLayer.cpp  TriangleLayer.h  main.cpp
src/Input/: Input.cpp  Input.h  KeyCodes.h
src/Integrators/: ExplicitEulerIntegrator.cpp  ExplicitEulerIntegrator.h  Integrator.h  RK4Integrator.h  VerletIntegrator.cpp  VerletIntegrator.h
src/Layers/: ClothLayer.cpp  ClothLayer.h  Layer.h  TriangleLayer.cpp  TriangleLayer.h
src/Lifecycle/: Application.cpp  Application.h  EntryPoint.h
src/Utilities/: Shader.cpp  Shader.h  Timer.h
